fix(layout): nav wasn't vertically aligned on mobile

--- a/src/PublicApp/styles/features/appLayout.scss
+++ b/src/PublicApp/styles/features/appLayout.scss
@@ -160,6 +160,7 @@ $appNavWidth: 13;
 %appNavItemLayout{
 	display: inline-block;
 	margin: 0 1em 0 0;
+	vertical-align: middle;
 	@include supports('app-grid', 'sticky-nav'){
 		z-index: 100;
 	}
